# Launcher

./: .gitignore  BUILD.md  CMakeLists.txt  COPYING.md  README.md
branding/: CMakeLists.txt
buildconfig/: BuildConfig.cpp.in  BuildConfig.h
launcher/: Application.cpp  Application.h  CMakeLists.txt  GuiUtil.cpp  Launcher.cpp  Launcher.h  MainWindow.cpp  MainWindow.h  UpdateController.cpp
launcher/dialogs/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui
launcher/java/: JavaUtils.cpp
launcher/minecraft/: ComponentUpdateTask.cpp  Library.cpp  Library.h  MinecraftInstance.cpp  MojangVersionFormat.cpp  OneSixVersionFormat.cpp  OpSys.cpp  OpSys.h
launcher/minecraft/auth/flows/: AuthContext.cpp  AuthContext.h
launcher/minecraft/launch/: LauncherPartLaunch.cpp  PatchLibraries.cpp  PatchLibraries.h
launcher/pages/global/: LauncherPage.cpp  LauncherPage.h  LauncherPage.ui
launcher/pages/modplatform/legacy_ftb/: ListModel.cpp
launcher/resources/OSX/: OSX.qrc
launcher/resources/flat/: flat.qrc
launcher/resources/iOS/: iOS.qrc
launcher/resources/multimc/: multimc.qrc
launcher/resources/pe_blue/: pe_blue.qrc
launcher/resources/pe_colored/: pe_colored.qrc
launcher/resources/pe_dark/: pe_dark.qrc
launcher/resources/pe_light/: pe_light.qrc
launcher/setupwizard/: SetupWizard.cpp
launcher/tools/: MCEditTool.cpp
launcher/ui/: GuiUtil.cpp  MainWindow.cpp  MainWindow.h
launcher/ui/dialogs/: AboutDialog.cpp  AboutDialog.ui
launcher/ui/instanceview/: InstanceView.cpp
launcher/ui/pages/: BasePage.h
launcher/ui/pages/global/: LauncherPage.cpp  LauncherPage.ui  PasteEEPage.ui
launcher/ui/pages/modplatform/legacy_ftb/: ListModel.cpp
launcher/widgets/: ServerStatus.cpp
libraries/: README.md
libraries/katabasis/include/katabasis/: OAuth2.h
libraries/katabasis/src/: OAuth2.cpp
libraries/systeminfo/src/: sys_unix.cpp
notsecrets/: CMakeLists.txt  Launcher.manifest  Secrets.cpp  launcher.rc
